push env example

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel_kokeru
+DB_DATABASE=monitoring_uis
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -30,7 +30,7 @@ MAIL_PORT=587
 MAIL_USERNAME=zeri.aldi21@gmail.com
 MAIL_PASSWORD=TBCJMHOjNyfvELmW
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=zeri.aldi21@gmail.com
+MAIL_FROM_ADDRESS=201055201017@uis.ac.id
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
